--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -20,6 +20,7 @@
       <a class="UNICO" href="./contact.html">CONTACT</a>
       <a class="UNICO" href="./schedule.html">SCHEDULE</a>
       <a class="UNICO" href="./BenefitsTips.html">BENEFICTS</a>
+      <a class="UNICO" href="./forms.html">CONTACT US</a>
     </nav>
     <figure class="logo">
       <img src="../Images/logo.png" alt="MY_LOGO" width="90" />
@@ -49,11 +50,9 @@
         </div>
       </div>
     </main>
-      /////////////
+
     <footer>
-      <div class="name">
-        vk (MERN inicial)
-      </div>
+      <h6>vk (MERN inicial)</h6>
     </footer>
   </body>
   
