--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -12,11 +12,12 @@
   <body>
     <div class="linea_navegador">
       <nav class="navegador_principal">
-        <a class="UNICO" href="/index.html">HOME</a>
+        <a class="UNICO" href="../../index.html">HOME</a>
         <a class="UNICO" href="./about.html">ABOUT</a>
         <a class="UNICO" href="#">CONTACT</a>
         <a class="UNICO" href="./schedule.html">SCHEDULE</a>
         <a class="UNICO" href="./BenefitsTips.html">BENEFICTS</a>
+        <a class="UNICO" href="./forms.html">CONTACT US</a>
       </nav>
       <figure class="logo">
         <img src="../Images/logo.png" alt="MY_LOGO" width="90" />
@@ -47,12 +48,9 @@
         </nav>
       </div>
     </main>
-////////////////
+
     <footer>
-      <div class="name">
-        vk (MERN inicial)
-      
-      </div>
+      <h6>vk (MERN inicial)</h6>
     </footer>
   </body>
   </html>
