--- a/assets/pages/schedule.html
+++ b/assets/pages/schedule.html
@@ -12,11 +12,12 @@
 <body>
     <div class="linea_navegador">
         <nav class="navegador_principal">
-            <a class="UNICO" href="/index.html">HOME</a>
+            <a class="UNICO" href="../../index.html">HOME</a>
             <a class="UNICO" href="./about.html">ABOUT</a>
             <a class="UNICO" href="./contact.html">CONTACT</a>
             <a class="UNICO" href="#">SCHEDULE</a>
             <a class="UNICO" href="./BenefitsTips.html">BENEFICTS</a>
+            <a class="UNICO" href="./forms.html">CONTACT US</a>
         </nav>
         <figure class="logo">
             <img src="../Images/logo.png" alt="MY_LOGO" width="90" />
@@ -29,7 +30,7 @@
         </div>
     </header>
     <main>
-    <table border="18">
+    <table>
             <tr>
                 <th style="background-color: rgba(169, 169, 169, 0.614);">ACTIVITIES</th>
                 <th style="background-color: rgba(169, 169, 169, 0.614);">SCHEDULE</th>
@@ -64,9 +65,7 @@
     </main>
     
     <footer class="INDF">
-        <div class="name">
-            vk (MERN inicial)
-    </div>
+        <h6>vk (MERN inicial)</h6>
 </footer>
 </body>
 </html>
