--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a class="UNICO" href="./assets/pages/contact.html">CONTACT</a>
       <a class="UNICO" href="./assets/pages/schedule.html">SCHEDULE</a>
       <a class="UNICO" href="./assets/pages/BenefitsTips.html">BENEFICTS</a>
+      <a class="UNICO" href="./assets/pages/forms.html">CONTACT US</a>
     </nav>
     <figure class="logo">
       <img src="./assets/Images/logo.png" alt="MY_LOGO" width="90" />
@@ -54,9 +55,7 @@
   </main>
 
   <footer class="INDF">
-    <h6>
-      vk (MERN inicial)
-    </h6>
+    <h6>vk (MERN inicial)</h6>
   </footer>
 </body>
 
