--- a/assets/pages/BenefitsTips.html
+++ b/assets/pages/BenefitsTips.html
@@ -13,11 +13,12 @@
 <body>
     <div class="linea_navegador">
         <nav class="navegador_principal">
-            <a class="UNICO" href="/index.html">HOME</a>
+            <a class="UNICO" href="../../index.html">HOME</a>
             <a class="UNICO" href="./about.html">ABOUT</a>
             <a class="UNICO" href="./contact.html">CONTACT</a>
             <a class="UNICO" href="./schedule.html">SCHEDULE</a>
             <a class="UNICO" href="#">BENEFICTS</a>
+            <a class="UNICO" href="./forms.html">CONTACT US</a>
         </nav>
         <figure class="logo">
             <img src="../Images/logo.png" alt="MY_LOGO" width="90" />
@@ -55,12 +56,9 @@
             </li>
         </ul>    
     </main>
-    ///////////////
+
     <footer class="INDF">
-        <div class="name">
-            vk (MERN inicial)
-            
-        </div>
+        <h6>vk (MERN inicial)</h6>
     </footer>
 
 </body>
