Chek antes de Q
RESPALDO

--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-      <h6>vk (MERN inicial)</h6>
+      <h6 class="foContac">vk (MERN inicial)</h6>
     </footer>
   </body>
   </html>
