--- a/assets/pages/schedule.html
+++ b/assets/pages/schedule.html
@@ -64,8 +64,8 @@
     </table>
     </main>
     
-    <footer class="INDF">
-        <h6>vk (MERN inicial)</h6>
+    <footer>
+        <h5 class="foSchedu">vk (MERN inicial)</h5>
 </footer>
 </body>
 </html>
