--- a/assets/pages/show_Data.html
+++ b/assets/pages/show_Data.html
@@ -1,21 +1,18 @@
 <html>
+    <head>
+        <title>Feedback Sent</title>
 
     <div class="linea_navegador">
-      <nav class="navegador_principal">
+    <nav class="navegador_principal">
         <a class="UNICO" href="../../index.html">HOME</a>
         <a class="UNICO" href="./about.html">ABOUT</a>
         <a class="UNICO" href="./contact.html">CONTACT</a>
         <a class="UNICO" href="./schedule.html">SCHEDULE</a>
         <a class="UNICO" href="./BenefitsTips.html">BENEFICTS</a>
-        <a class="UNICO" href="./forms.html">CONTACT US</a>
+        <a class="UNICO" href="#">CONTACT US</a>
       </nav>
-      <figure class="logo">
-        <img src="../Images/logo.png" alt="MY_LOGO" width="90" />
-      </figure>
     </div>
 
-    <head>
-    <title>Feedback Sent</title>
     <script type="text/javascript"
         src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=vyranTma8xd2jHX7X-wdUGmZSNZ38ZIN6kYAFYpUGWpLORQ416sIIyCgEG3em9ZA703P8zfHCYSgORcbOdGjQFFb7ido_0xo7pWFiQpyXh2dz0q0X8nei-1m6Tj0Ex269rdEQe-cy6h4EmqS03-LzA"
         charset="UTF-8"></script>
