--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -42,7 +42,7 @@
           We take weekends to rest.
         </p>
           
-        <nav>
+        <nav class="navegador_otro">
           <a class="NAVI" href="mailto:OlympusGymMH@gmail.com" target="_blank"> OlympusGymMH@gmail.com</a>
           <a class="NAVI" href="mailto:TEL:+1111111121111" target="_blank">TEL:+1111111121111</a>
         </nav>
